syntax = "proto3";

package greeter;
//option go_package = "./greeter";
option go_package = "go-client/greeter";
//option go_package = "go-client;greeter";
// option go_package = "github.com/yourusername/projectname/go-client;greeter";
option java_package = "com.example.grpc";
option java_multiple_files = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

